[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/main_background.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/DifficultyMenu.gd" type="Script" id=2]

[node name="Difficulty" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 261.615, 144.092 )
texture = ExtResource( 1 )

[node name="Difficulty" type="Label" parent="."]
margin_left = 128.298
margin_top = 104.385
margin_right = 236.298
margin_bottom = 118.385
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Choose Difficulty"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Easy" type="Button" parent="Buttons"]
margin_left = 156.0
margin_top = 156.0
margin_right = 260.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Beginner"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="Buttons"]
margin_left = 156.0
margin_top = 208.0
margin_right = 260.0
margin_bottom = 228.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Novice"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="Buttons"]
margin_left = 156.0
margin_top = 260.0
margin_right = 260.0
margin_bottom = 280.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Expert"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Buttons/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Buttons/Hard" to="." method="_on_Hard_pressed"]
